fix: swagger add avatar
