# src/routes/signup-router.ts
@@ -2,11 +2,16 @@
 import { userController } from "controllers";
 import express from "express";
 import multer from "multer";
+import { fileFilter, fileStorageAvatar } from "types/multers";
 
 const signUpRouter = express.Router();
 const { signUp, getUserLogin, emailVerification } = userController;
 
-signUpRouter.post("/signup", signUp);
+signUpRouter.post(
+  "/signup",
+  multer({ storage: fileStorageAvatar, fileFilter }).single("avatar"),
+  signUp
+);
 signUpRouter.post("/login", getUserLogin);
 signUpRouter.post("/verification", emailVerification);
 
